<resources>
    <string name="app_name">CleanArchitectureMVVM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_connection_error">Check your internet connection and try again</string>
    <string name="something_went_wrong">Something went wrong! Please retry!</string>
    <string name="first_brewed">First Brewed</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="get_random_beer">Get Random Beer</string>
    <string name="retry">Retry</string>
    <string name="abv">ABV</string>
    <string name="you_have_no_favorite_beers">You have no favorite beers</string>
    <string name="remove">Remove</string>
    <string name="added_to_favorites">Added to Favorites</string>
    <string name="beer_not_added_to_favorites">Beer not Added to Favorites</string>
    <string name="abv_percent">%.2f%%</string>
    <string name="done">Done</string>
</resources>